# RecursiveAgent

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
src/agent/: state.py
src/tools/: python_repl.py
