[project]
name = "recursiveagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
